PER-434 added chat-gpt article, some fixes in ga4 article

--- a/files for admin/CMS Pages/services/ga4.html
+++ b/files for admin/CMS Pages/services/ga4.html
@@ -85,7 +85,7 @@
           </p>
         </div>
 
-        <div class="article-gtm__image-container">
+        <div class="article__image-container">
           <img
             src="{{view url='Mirasvit_Blog::images/article/gtm/trafic.png'}}"
             alt="Why should You upgrade to Google Analytics 4, illustration,seo,traffic"
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div class="article__row">
-        <div class="article-gtm__image-container">
+        <div class="article__image-container">
           <img
             src="{{view url='Mirasvit_Blog::images/article/gtm/statistic.png'}}"
             alt="Google Analytics 4 is based on events and parameters and designed to track users interactions with your product, illustration"
@@ -460,7 +460,7 @@
           :class="{'_active' : selected == 2 }"
           @click="selected !== 2 ? selected = 2 : selected = null"
         >
-          <h5>Track your customer's journey and behavior with GA4 integration on Magento 2</h5>
+          <p>Track your customer's journey and behavior with GA4 integration on Magento 2</p>
         </div>
         <div class="article__dropdowns-block__content" x-cloak x-ref="container2" x-show="selected == 2">
           <p>
@@ -484,9 +484,9 @@
           :class="{'_active' : selected == 3 }"
           @click="selected !== 3 ? selected = 3 : selected = null"
         >
-          <h5>
+          <p>
             Understand user behavior more deeply through time-based event tracking with GA4 integration on Magento 2
-          </h5>
+          </p>
         </div>
         <div class="article__dropdowns-block__content" x-cloak x-ref="container3" x-show="selected == 3">
           <p>
@@ -512,7 +512,7 @@
           :class="{'_active' : selected == 4 }"
           @click="selected !== 4 ? selected = 4 : selected = null"
         >
-          <h5>Take retargeting to the next level with GA4's advanced capabilities on Magento 2</h5>
+          <p>Take retargeting to the next level with GA4's advanced capabilities on Magento 2</p>
         </div>
         <div class="article__dropdowns-block__content" x-cloak x-ref="container4" x-show="selected == 4">
           <p>
@@ -538,7 +538,7 @@
           :class="{'_active' : selected == 5 }"
           @click="selected !== 5 ? selected = 5 : selected = null"
         >
-          <h5>Monitor and analyze user acquisition with GA4 reports on Magento 2</h5>
+          <p>Monitor and analyze user acquisition with GA4 reports on Magento 2</p>
         </div>
         <div class="article__dropdowns-block__content" x-cloak x-ref="container5" x-show="selected == 5">
           <p>
@@ -564,7 +564,7 @@
           :class="{'_active' : selected == 6 }"
           @click="selected !== 6 ? selected = 6 : selected = null"
         >
-          <h5>Seamlessly integrate GA4 with Magento 2 for enhanced e-commerce tracking</h5>
+          <p>Seamlessly integrate GA4 with Magento 2 for enhanced e-commerce tracking</p>
         </div>
         <div class="article__dropdowns-block__content" x-cloak x-ref="container6" x-show="selected == 6">
           <p>
@@ -590,7 +590,7 @@
           :class="{'_active' : selected == 7 }"
           @click="selected !== 7 ? selected = 7 : selected = null"
         >
-          <h5>Gain a deeper understanding of customer behavior and e-commerce performance with GA4 on Magento 2</h5>
+          <p>Gain a deeper understanding of customer behavior and e-commerce performance with GA4 on Magento 2</p>
         </div>
         <div class="article__dropdowns-block__content" x-cloak x-ref="container7" x-show="selected == 7">
           <p>
