--- a/email-templates/html/ecommerce-berlin/index.html
+++ b/email-templates/html/ecommerce-berlin/index.html
@@ -362,12 +362,12 @@
         }
       }
       @media screen and (min-width: 600px) {
-        .updates-square:nth-child(1) {
+        .updates-square.updates-square-1 {
           border-right: 0 !important;
         }
       }
       @media screen and (min-width: 600px) {
-        .updates-square:nth-child(2) {
+        .updates-square.updates-square-2 {
           max-width: 34%;
           border-right: 0 !important;
         }
@@ -452,6 +452,26 @@
       @media screen and (max-width: 599px) {
         .section-intro-2__image img {
           display: block;
+        }
+      }
+      @media screen and (min-width: 600px){
+        .section-corporate-upd__image{
+          margin-left: auto;
+          margin-right: 47px;
+        }
+        .table-image .col-1{
+          padding-right: 0 !important;
+        }
+        .table-image .col-1 .section-corporate-upd__text{
+          padding-right: 0 !important;
+          padding-left: 10px !important;
+          max-width: 320px !important;
+        }
+        .table-image .col-1{
+          max-width: 350px !important;
+        }
+        .table-image .col-2{
+          max-width: 210px !important;
         }
       }
     </style>
@@ -575,15 +595,15 @@
                         <tr>
                           <td class="text">
                             <h1 class="section-intro__title">
-                              AI-Powered Innovations: Shaping the Future of E-Commerce in 2023
+                              Stay on Top of eCommerce Trends with our March 2023 Newsletter
                             </h1>
                             <p
                               class="text-lg"
                               style="font-weight: 400; padding-bottom: 10px; font-size: 16px; line-height: 24px"
                             >
                               <span>
-                                Delve into the groundbreaking advancements in artificial intelligence and machine
-                                learning, revolutionizing e-commerce and transforming retail industry as we know it.
+                                Boost sales with Magento, optimize SEO, and discover the impact of AI chatbots in
+                                retail.
                                 <br />
                                 <br />
                               </span>
@@ -645,7 +665,7 @@
                             <p class="text-base" style="padding-bottom: 35px">
                               Join us for the E-Commerce Expo 2023 in Stockholm, taking place from May 31st to June 1st,
                               where we'll explore the latest innovations and trends in the dynamic world of online
-                              retail!
+                              retail
                             </p>
                           </td>
                         </tr>
@@ -667,7 +687,7 @@
                             <img
                               src="https://raw.githubusercontent.com/rostilos/new-perspective/master/email-templates/images/ecommerce-berlin/IMAGE-2-2.png"
                               alt="test"
-                              style="margin-top: 20px;"
+                              style="margin-top: 20px"
                             />
                           </td>
                         </tr>
@@ -725,7 +745,7 @@
                                 href="https://perspectiveteam.com/blog/must-have-magento-2-extensions-to-boost-your-sales-in-2023.html"
                                 class="text-base section-stories__text"
                                 style="font-weight: 500; color: inherit"
-                                >Must-have magento 2 extensions to boost your sales in 2023
+                                >Must-have Magento 2 extensions to boost your sales in 2023
                               </a>
                             </div>
                           </td>
@@ -752,7 +772,8 @@
                                 href="https://perspectiveteam.com/blog/mastering-core-web-vitals-a-guide-to-enhancing-user-experience-article.html"
                                 class="text-base section-stories__text"
                                 style="font-weight: 500; color: inherit"
-                                >Mastering Core Web Vitals: A Guide to Enhancing User Experience article | Perspective
+                                >Mastering Core Web Vitals:<br />
+                                A Guide to Enhancing User Experience
                               </a>
                             </div>
                           </td>
@@ -1319,13 +1340,13 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="two-column" style="background: #e17139">
+                      <td class="two-column table-image" style="background: #e17139">
                         <!--[if (gte mso 9)|(IE)]>
                         <table width="100%">
                         <tr>
                         <td width="50%" valign="top">
                         <![endif]-->
-                        <div class="column" style="max-width: 284px">
+                        <div class="column col-1" style="max-width: 284px">
                           <table width="100%">
                             <tr>
                               <td class="inner">
@@ -1349,7 +1370,7 @@
                         <!--[if (gte mso 9)|(IE)]>
                         </td><td width="50%" valign="top">
                         <![endif]-->
-                        <div class="column" style="max-width: 284px">
+                        <div class="column col-2" style="max-width: 284px">
                           <table width="100%">
                             <tr>
                               <td class="inner">
@@ -1358,7 +1379,16 @@
                                     <td>
                                       <img
                                         class="section-corporate-upd__image"
-                                        style="bottom: 0; right: 0;margin-top: 10%;margin-bottom: 10%;margin-left:auto;margin-right:auto;display:block;width:140px;"
+                                        style="
+                                          bottom: 0;
+                                          right: 0;
+                                          margin-top: 10%;
+                                          margin-bottom: 10%;
+                                          margin-left: auto;
+                                          margin-right: auto;
+                                          display: block;
+                                          width: 140px;
+                                        "
                                         src="https://github.com/rostilos/new-perspective/blob/master/email-templates/images/ecommerce-berlin/3926908.png?raw=true"
                                         alt="img"
                                       />
@@ -1385,7 +1415,7 @@
           <tr>
             <td class="one-column">
               <div style="display: inline-block; width: 100%; font-size: 0">
-                <div class="updates-square" style="border: 1px solid #949494">
+                <div class="updates-square updates-square-1" style="border: 1px solid #949494">
                   <table>
                     <tbody>
                       <tr style="vertical-align: top">
@@ -1419,7 +1449,7 @@
                   </table>
                 </div>
 
-                <div class="updates-square" style="border: 1px solid #949494">
+                <div class="updates-square updates-square-2" style="border: 1px solid #949494">
                   <table>
                     <tbody>
                       <tr style="vertical-align: top">
