--- a/files for admin/CMS Blocks/contacts.html
+++ b/files for admin/CMS Blocks/contacts.html
@@ -22,7 +22,7 @@
       <div class="contacts-square__title">Become a Client</div>
       <div class="contacts-square__content">
         <p>+1 312-239-0843</p>
-        <p>order@perspective.net.ua</p>
+        <p>order@perspectiveteam.com</p>
       </div>
     </div>
     <div
@@ -31,7 +31,7 @@
       <div class="contacts-square__title">Find us</div>
       <div class="contacts-square__content">
         <p>Kyiv, 15a Tumaniana</p>
-        <p>perspective.net.ua</p>
+        <p>perspectiveteam.com</p>
       </div>
     </div>
   </div>
